<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>ros_av_toolkit_perception_camera</name>
  <version>0.1.0</version>
  <description>
    Perception Module for ROS2 Autonomous Vehicle Systems
  </description>
  <maintainer email="umtclskn@gmail.com">Umut Caliskan</maintainer>
  <license>Apache License 2.0</license>
  <author email="umtclskn@gmail.com">Umut Caliskan</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>eigen</depend>
  <depend>libpcl-all-dev</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>  
  <depend>av_toolkit_custom_msgs</depend>
  <depend>ros_av_interfaces</depend>  
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
